# cmake

./: .gitignore  README.md
src/07_cmake/swap_project/: CMakeLists.txt  main.cpp
src/07_cmake/swap_project/include/: swap2.h
src/07_cmake/swap_project/src/: swap.cpp
src/08_demo/: CMakeLists.txt  main.cpp
src/08_demo/include/: Gun.h  Soldier.h
src/08_demo/src/: Gun.cpp  Soldier.cpp
